Update experiment deadline

--- a/assignments/experiment.Rmd
+++ b/assignments/experiment.Rmd
@@ -48,4 +48,4 @@ Grading will be flexible. I will not grade you on whether you find significant o
 
 [Create your assignment repo through GitHub Classrooms.](https://classroom.github.com/g/WtfroPll) Submit your analysis as a single R Markdown document rendered using the `github_document` output format.^[Use `html_document` if needed to properly render your graphs.] The repo should also contain a copy of the generated data file and documentation of the survey and the treatment/condition versions of your graphic.
 
-Your submission is due by **11:00am on Tuesday, May 1st**.
+Your submission is due by **~~11:00am on Tuesday, May 1st~~ 11:59pm on Friday, May 4th**.
