--- a/notes/interactive-graphics-slides.Rmd
+++ b/notes/interactive-graphics-slides.Rmd
@@ -717,20 +717,29 @@ server <- function(input, output) {
 shinyApp(ui = ui, server = server)
 ```
 
-## Using buttons in the UI
+## Using uiOutput() to create UI elements dynamically
 
-* Different from other inputs: you usually don't care about the "value" of the button, you care when it's clicked
-    ```r
-    ui <- fluidPage(
-      actionButton("btn", "Click me")
-    )
-    server <- function(input, output, session) {
-      observe({
-        cat(input$btn)
-      })
-    }
-    shinyApp(ui = ui, server = server) 
-    ```
+* `uiOutput()`
+* Changing input values based on other inputs
+
+## Basic example of uiOutput()
+
+```r
+library(shiny)
+ui <- fluidPage(
+  numericInput("num", "Maximum slider value", 5),
+  uiOutput("slider")
+)
+
+server <- function(input, output) {
+  output$slider <- renderUI({
+    sliderInput("slider", "Slider", min = 0,
+                max = input$num, value = 0)
+  })
+}
+
+shinyApp(ui = ui, server = server)
+```
 
 ## Share your app: shinyapps.io
 
